--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "gss"
   ],
   "author": "Braxton Spence",
-  "license": "GPL-2.0"
+  "license": "GPL-2.0",
+  "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "webpack": "^1.13.1"
+  }
 }
